# hloc

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  renovate.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: by_lang_data.js  by_repo_data.js  chart.html  chart.js  charts.rs  commit_trie.rs  config.rs  count.rs  git.rs  history_trie.rs  languages.rs  main.rs  stats.rs  time_period.rs  util.rs  year_month.rs
templates/: chart.css  chart.html  chart.js
tests/: config.toml
