[package]
name = "hloc"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20"
tokei = "14.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
walkdir = "2.5"
clap = "4.5"
console = "0.16"
log = "0.4"
env_logger = "0.11"
rust-embed="8.11"
rayon = "1.11"
indicatif = { version = "0.18", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
globset = "0.4"
linked_hash_set = "0.1"
anyhow = "1.0"
pathdiff = "0.2"
unicode-segmentation = "1.12"